--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -198,7 +198,7 @@
   <string id="251">Select destination directory</string>
   <string id="252">Output stereo to all speakers</string>
   <string id="253">Number of channels</string>
-  <string id="254">- DTS Capable Receiver</string>
+  <string id="254">- DTS capable receiver</string>
   <string id="255">CDDB</string>
   <string id="256">Fetching CD information</string>
   <string id="257">Error</string>
@@ -241,10 +241,10 @@
   <string id="296">Clear bookmarks</string>
   <string id="297">Audio offset</string>
   <string id="298">Bookmarks</string>
-  <string id="299">- AAC Capable Receiver</string>
-  <string id="300">- MP1 Capable Reciever</string>
-  <string id="301">- MP2 Capable Reciever</string>
-  <string id="302">- MP3 Capable Reciever</string>
+  <string id="299">- AAC capable receiver</string>
+  <string id="300">- MP1 capable receiver</string>
+  <string id="301">- MP2 capable receiver</string>
+  <string id="302">- MP3 capable receiver</string>
   <string id="303">Delay</string>
   <string id="304">Language</string>
   <string id="305">Enabled</string>
