added: XBMC specific code to show and execute PVR client hook actions
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28226 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1707,7 +1707,9 @@
   <string id="19191">PVR service</string>
   <string id="19192">No Server support channel scanning</string>
   <string id="19193">Channel scan can't be started</string>
-  <string id="19193">Continue?</string>
+  <string id="19194">Continue?</string>
+  <string id="19195">Client actions</string>
+  <string id="19196">PVR client specific actions</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
