--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1805,6 +1805,8 @@
   <string id="19192">Keiner der PVR-Server unterstützt die Kanalsuche</string>
   <string id="19193">Kanalsuche konnte nicht durchgeführt werden</string>
   <string id="19194">Fortfahren?</string>
+  <string id="19195">Klientaktionen</string>
+  <string id="19196">PVR Klient spezifische Aktionen</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
