Added a 'banner' string

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -90,6 +90,7 @@
   <string id="31125">Theater Times</string>
   <string id="31126">TV Show Details</string>
   <string id="31127">Episode Details</string>
+  <string id="31128">Banner</string>
 
 <!--  Music  -->
   <string id="31220">Currently Playing</string>
