fixed: Usage of demuxers inside pvr addon's fixed: Several bugfixes and improvements added: Patch "hts-tvheadend-2.10-AddSignalQuality.diff" to get signal quality from hts added: Demuxer code to hts addon fixed: hts addon can play channels now (no epg and nothing else) fixed: Triggering (open/close) of seek bar during live tv playback on every frame move changed: reverted XBMC's HTSP code parts inside DVDPlayer to trunk version added: Usage of User/Pass inside hts addon for tvheadend
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28676 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/com.lonelycoder.hts.pvr/resources/language/English/strings.xml
+++ b/addons/com.lonelycoder.hts.pvr/resources/language/English/strings.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <!-- settings labels -->
-    <string id="30000">Tvheadend Hostname</string>
+    <string id="30000">Tvheadend Hostname or IP</string>
     <string id="30001">HTSP Port</string>
-    <string id="30002">Free-to-air only</string>
-    <string id="30003">Include Radio</string>
-    <string id="30004">Character Set Conversion</string>
-    <string id="30005">Connect timeout (s)</string>
-    <string id="30006">Ignore Channels without VPID and APID</string>
-    <string id="30007">Allow HTSP Messages</string>
+    <string id="30002">Username</string>
+    <string id="30003">Password</string>
 </strings>
