changed: Connect to tvheadend over new class cHTSPData inside addon added: Thread handling class added: Support for EPG and improved Channel loading fixed: English string for PVR addons inside addon browser missing fixed: TVHeadend addon now support everything except recordings and timers
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@28682 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2502,6 +2502,7 @@
   <string id="24001">Add-ons</string>
 
   <string id="24005">Plugin</string>
+  <string id="24006">PVR Client</string>
   <string id="24007">Scraper</string>
   <string id="24008">Screensaver</string>
   <string id="24009">Script</string>
