--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1711,6 +1711,7 @@
   <string id="20252">Filling glasses (videos)</string>
   <string id="20253">WebDAV server (HTTP)</string>
   <string id="20254">WebDAV server (HTTPS)</string>
+  <string id="20255">First logon, edit your profile</string>
 
   <string id="20300">Web server directory (HTTP)</string>
   <string id="20301">Web server directory (HTTPS)</string>
