Modified Info List views --  work in progress

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -48,7 +48,8 @@
   <string id="31044">By</string>
   <string id="31045">Recently Added</string>
   <string id="31046">Path to Lyrics Script</string>
-	<string id="31050">Items</string>
+  <string id="31047">Not Available</string>
+  <string id="31050">Items</string>
 
 <!--  Programs  -->
   <string id="31051">Games</string>
