[DSPlayer] added: support for custom font for subtitle rendering
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29092 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2264,4 +2264,6 @@
   <string id="35053">- Outline width</string>
   <string id="35054">- Shadow depth</string>
   <string id="35055">- Alpha</string>
+  <string id="35056">Font to use for text subtitles (dsplayer only) : %s</string>
+  <string id="35057">Choose a font</string>
 </strings>
