Changed name of episodes view to Episodes List

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -187,6 +187,7 @@
   <string id="31716">Coverflow</string>
   <string id="31717">Options Menu</string>
   <string id="31720">Grid</string>
+  <string id="31721">Episodes List</string>
 
 <!--  Credits  -->
   <string id="31800">Credits</string>
