--- a/addons/de.tvdr.vnsi.pvr/resources/language/German/strings.xml
+++ b/addons/de.tvdr.vnsi.pvr/resources/language/German/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <!-- settings labels -->
-    <string id="30000">Tvheadend Hostname oder IP</string>
+    <string id="30000">VDR Hostname oder IP</string>
     <string id="30001">VNSI Port</string>
     <string id="30002">Priorität</string>
     <string id="30003">Textkonvertierung (UTF-8)</string>
