[DSPlayer] merged from trunk r29264:29307
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@29309 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/skin/Confluence/language/English/strings.xml
+++ b/skin/Confluence/language/English/strings.xml
@@ -25,6 +25,7 @@
   <string id="31030">Full list</string>
   <string id="31031">Pic Thumbs</string>
   <string id="31032">Image Wrap</string>
+  <string id="31033">Info</string>
 
   <!-- Extra labels -->
   <string id="31040">Now Playing</string>
@@ -58,8 +59,8 @@
   <string id="31106">Miscellaneous options</string>
   <string id="31107"></string>
   <string id="31108">Hide Main Menu Buttons</string>
-  <string id="31109">Home screen backgrounds</string>
-  <string id="31110">Edit Background for Home Button</string>
+  <string id="31109">Media backgrounds</string>
+  <string id="31110">Edit Background for Media Type</string>
   <string id="31111">Hide</string>
   <string id="31112">Options</string>
   <string id="31113">Single Image</string>
