Add and then comment out sleep display option, b/c it doesn't work well

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -243,6 +243,7 @@
   <string id="31961">Shut Down</string>
   <string id="31962">Power Menu</string>
   <string id="31963">displays</string>
+	<string id="31964">Sleep Display</string>
 
 	<string id="31998">Hide Now Playing in Visualizer</string>
 	<string id="31999">End Time</string>
