added: A ugly, but working GUI interface for addons (hope to have a better idea in the future for this) added: Support for channel scans over the VDR VNSI client addon added: Confluence skin for channel scanning inside VNSI addon dir added: Support for channel scanning inside VDR VNSI server plugin (need modified wirbelscan plugin) added: Patch for VDR's wirbelscan plugin to add a service interface for communication with VNSI server fixed: Removed unused addon folders (trunk merge issues)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29449 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/vdr-vnsi/README
+++ b/xbmc/pvrclients/vdr-vnsi/README
@@ -40,6 +40,18 @@ Run a "make plugins" and depented on your environment a "make install".
 And add "-P'vnsiserver'" to your startup options.
 
 
+------------------------------------------
+CHANNEL SCANNING
+
+For channel scan's a modified version of the wirbelscan plugin for VDR (Version dev-0.0.5-pre11e) is
+required. You can download the orginal source from here "http://wirbel.htpc-forum.de/wirbelscan/index2.html".
+
+The VNSI communicate with wirbelscan over VDR's plugin service interface, to add this feature
+you must patch wirbelscan with the file in "patches/vdr-wirbelscan-0.0.5-pre11e-AddServiceInterface.diff".
+
+Please load VDR with VNSI plugin together with the modified wirbelscan plugin and you can access the
+"Search Channels" option inside "Settings->TV->General"
+
 
 ------------------------------------------
 
