fixed: Percentage shows -1 during scan fixed: stray whitespace inside VNSI addon language file changed: Updated VNSI README files a bit changed: Only dim screen if screensaver is started during channel scan
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29458 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/vdr-vnsi/README
+++ b/xbmc/pvrclients/vdr-vnsi/README
@@ -27,7 +27,7 @@ The connection of this AddOn depend upon a installed VNSI-Server-Plugin on the V
 is included inside the "vdr-plugin-vnsiserver" directory of this Addon.
 VDR itself need no patches or modification to use all current features.
 
-VDR Versions older as 1.7.2 are not supported by this plugin.
+VDR Versions older as 1.6.0 are not supported by this plugin.
 
 ------------------------------------------
 PLUGIN INSTALLATION INSTRUCTIONS:
@@ -51,6 +51,12 @@ you must patch wirbelscan with the file in "patches/vdr-wirbelscan-0.0.5-pre11e-
 
 Please load VDR with VNSI plugin together with the modified wirbelscan plugin and you can access the
 "Search Channels" option inside "Settings->TV->General"
+
+Note: Please notice the warning on the wirbelscan plugin homepage:
+      "Development Version - kein Support. Benutzung auf eigene Verantwortung."
+      "Development Version - no support. Use at your own risk."
+      This means, the time how long the scan run and problems on VDR side are dependet on wirbelscan
+      and not part of VNSI.
 
 
 ------------------------------------------
