--- a/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
+++ b/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
@@ -22,3 +22,9 @@ required. You can download the orginal source from here "http://wirbel.htpc-foru
 
 The VNSI communicate with wirbelscan over VDR's plugin service interface, to add this feature
 you must patch wirbelscan with the file in "patches/vdr-wirbelscan-0.0.5-pre11e-AddServiceInterface.diff".
+
+Note: Please notice the warning on the wirbelscan plugin homepage:
+      "Development Version - kein Support. Benutzung auf eigene Verantwortung."
+      "Development Version - no support. Use at your own risk."
+      This means, the time how long the scan run and problems on VDR side are dependet on wirbelscan
+      and not part of VNSI.
