added: PVR Helper functions for status updates added: Status message handling from VNSI server to client added: Update timers list inside PVRManager thread fixed: Minor code cleanups
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@29460 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1713,6 +1713,8 @@
   <string id="19194">Continue?</string>
   <string id="19195">Client actions</string>
   <string id="19196">PVR client specific actions</string>
+  <string id="19197">Recording started on: %s</string>
+  <string id="19198">Recording finished on: %s</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
