--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -100,6 +100,9 @@
   <string id="31134">Cast</string>
   <string id="31135">Director</string>
   <string id="31136">Writer</string>
+  <string id="31137">Episodes</string>
+  <string id="31138">Watched</string>
+  <string id="31139">Unwatched</string>
 
 
 <!--  Music  -->
