Fixing an errant typo and alignment problem.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -103,6 +103,7 @@
   <string id="31137">Episodes</string>
   <string id="31138">Watched</string>
   <string id="31139">Unwatched</string>
+  <string id="31140">First Aired</string>
 
 
 <!--  Music  -->
