--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2139,12 +2139,15 @@
   <string id="24065">Add-on updated</string>
   <string id="24066">Cancel Add-on download?</string>
   <string id="24067">Currently downloading addons</string>
+  <string id="24068">Update available</string>
+  <string id="24069">Update</string>
 
   <string id="24070">Add-on can not used</string>
   <string id="24071">An unknown error has occurred</string>
   <string id="24072">Settings required</string>
   <string id="24073">Could not connect</string>
   <string id="24074">Needs to restart</string>
+  <string id="24075">Disable</string>
   <string id="24080">Try to reconnect?</string>
   <string id="24089">Add-on restarts</string>
 
