--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2125,6 +2125,8 @@
   <string id="24028">Weather.com (standard)</string>
   <string id="24030">This Add-on can not be configured</string>
   <string id="24031">Error loading settings</string>
+  <string id="24032">All repositories</string>
+  <string id="24033">Repositories</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
